--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -8,11 +8,15 @@ body{
     margin: 0;
     overflow-x: hidden;
     background-color: #373737;
+    width: 100%;
+}
+
+main{
     width: 100vw;
 }
 
 .main{
-    position: relative;
+    position:relative;
     left: 25vw;
     width: 75vw;
     height: 100%;
