--- a/scss/layout/_container.scss
+++ b/scss/layout/_container.scss
@@ -67,7 +67,7 @@
     box-sizing: border-box;
     display: block;
     position: relative;
-    width: 100%;
+    width: 100vw;
     margin-top: 30px;
     border: solid #4E4E4E 1px;
     border-radius: 15px;
